--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+logging.level. = INFO
+server.port=9966
+
+spring.datasource.initialize=true
+spring.datasource.schema=classpath*:database/createDB.sql
+spring.datasource.data=classpath*:database/initDB.sql
+
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_api?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=UTF-8;
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
